# AndTest

./: build.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/schemas/com.at.test.activity.life.UserRepository.AppDatabase/: 1.json
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/at/test/: IBook.aidl  OnBookListener.aidl
app/src/main/cpp/: Application.mk  native-lib.cpp
app/src/main/cpp/bar/: Android.mk  bar.cpp  bar.h  touch.cpp  touch.h
app/src/main/cpp/ff/: player.cpp  player.h
app/src/main/cpp/ffmpeg/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/cpp/foo/: Android.mk  foo.cpp  foo.h
app/src/main/cpp/utils/: utilc.c  utilc.h
app/src/main/java/com/at/test/: TestApplication.java
app/src/main/java/com/at/test/activity/: CoordinatorLayoutActivity.java  CustomActivity.java  FadeActivity.java  FlowActivity.java  FrescoActivity.java  MultipleItemsListActivity.java  ObjectAnimationActivity.java  PageFlingActivity.java  Process2Activity.java  Process2ChildActivity.java  ScrollActivity.java  SuperHorizontalActivity.java  TestActivity.java  TranslateActivity.java
app/src/main/java/com/at/test/activity/life/: ILoading.java  IResponse.java  Life.java  LifecycleActivity.java  NetStatus.java  User.java  UserLifecycle.java  UserRepository.java  UserViewModel.java
app/src/main/java/com/at/test/activity/rcy/: DouYinListActivity.java
app/src/main/java/com/at/test/activity/start/: BundleParam.java  Router.java  RouterPath.java  Start.java  StartActivity.java  StartFactory.java  StartTestActivity.java
app/src/main/java/com/at/test/aidl/: AIDL.java
app/src/main/java/com/at/test/aidl/book/: BookActivity.java  BookManagerService.java  BookService.java
app/src/main/java/com/at/test/app/: AppTest.java
app/src/main/java/com/at/test/app/keyguard/: KeyguardActivity.java
app/src/main/java/com/at/test/app/notify/: NotifyActivity.java
app/src/main/java/com/at/test/app/usage/: UsagesActivity.java
app/src/main/java/com/at/test/app/wallpaper/: WallpaperActivity.java
app/src/main/java/com/at/test/base/: BaseActivity.java
app/src/main/java/com/at/test/design/: DesignActivity.java
app/src/main/java/com/at/test/graphics/: GraphicsTest.java
app/src/main/java/com/at/test/hw/: HwTest.java
app/src/main/java/com/at/test/inputmethod/: InputMethodActivity.java
app/src/main/java/com/at/test/media/: MediaTest.java
app/src/main/java/com/at/test/ndk/: NdkActivity.java
app/src/main/java/com/at/test/net/: NetTest.java  NetTest.kt
app/src/main/java/com/at/test/opengl/: GLActivity.java  GLJavaActivity.java  MyGLSurfaceView.java
app/src/main/java/com/at/test/opensl/: OpenSLRecorderActivity.java  OpenSLTest.java
app/src/main/java/com/at/test/service/: ServiceTest.java
app/src/main/java/com/at/test/sliding/: ActivityBackHelper.java  BackUtil.java  IBackListener.java  LogM.java  SlidingFinishLayout.java  TestActivity.java
app/src/main/java/com/at/test/telephony/: TelephoneActivity.java
app/src/main/java/com/at/test/text/: TextTest.java
app/src/main/java/com/at/test/transition/: Transition2Activity.java  TransitionActivity.java
app/src/main/java/com/at/test/utils/: AnimatorUtils.java  ClassUtils.java  ProcessUtil.java  TypedUtil.java
app/src/main/java/com/at/test/views/: CircleTextView.java  CustomImageView.java  CustomImageView1.java  CustomView.java  FadeListView.java  Flow1Layout.java  FlowLayout.java  PaintView.java  RichEditText2.java  SuperHorizontalScrollView.java  SuperListView.java
app/src/main/res/drawable/: shape_btn_common.xml
app/src/main/res/layout/: activity_audio.xml  activity_coordinator_layout.xml  activity_design.xml  activity_dy_list.xml  activity_fade.xml  activity_flow.xml  activity_fresco.xml  activity_gl.xml  activity_gl_java.xml  activity_local_socket.xml  activity_media_audio.xml  activity_media_extractor.xml  activity_media_player.xml  activity_media_sync.xml  activity_mrecorder.xml  activity_mrecorder2.xml  activity_mrecorder3.xml  activity_ndk.xml  activity_net_websocket.xml  activity_object.xml  activity_pagefling.xml  activity_process2.xml  activity_sample_view.xml  activity_scroll.xml  activity_super_horizal.xml  activity_test.xml  activity_transition.xml  activity_transition2.xml  activity_translation.xml  activity_videoview.xml  include_transition2.xml  item_test_classname.xml  load_footer.xml  refresh_header.xml  view_douyin_list_item.xml
app/src/main/res/values/: attrs.xml  strings.xml  styles_text.xml
app/src/main/res/values-ab/: strings.xml
app/src/test/java/com/android/test/: JavaTest.java
av/: build.gradle
av/src/main/jni/: av.cpp  av.h
(+54 files in other folders)
